--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mapbox LA Crime Data</title>
-  <link href="public/styles.css" rel="stylesheet">
+  <link href="./public/styles.css" rel="stylesheet">
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako_inflate.min.js"></script>
@@ -12,6 +12,6 @@
 </head>
 <body>
   <div id="map"></div>
-  <script type='module' src="src/script.js"></script>
+  <script type='module' src="./src/script.js"></script>
 </body>
 </html>
